# jetson-pathgen

./: .gitignore  CMakeLists.txt  README.md  installDependencies.sh
include/: main.h
pathgen/include/: fit.h  generator.h  io.h  mathutil.h  spline.h  structs.h  trajectory.h
pathgen/include/followers/: distance.h  encoder.h
pathgen/include/modifiers/: swerve.h  tank.h
pathgen/src/: fit.cpp  generator.c  io.cpp  spline.c  trajectory.c
pathgen/src/followers/: distance.c  encoder.cpp
pathgen/src/modifiers/: swerve.c  tank.c
src/: main.cpp
